test_suite/tests/errors/final_state_missing_exit.stderr
error: Final state `foo` must have a return or state transition statement. Add `return` or `=> @state` to at least one rule
 --> tests/errors/final_state_missing_exit.rs:6:10
  |
6 |         @foo
  |          ^^^
